--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
     "react-spring": "^9.7.3",
+    "react-typed": "^1.2.0",
     "recharts": "^2.10.1"
   },
   "devDependencies": {
