--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.19.0",
     "react-spring": "^9.7.3",
     "react-typed": "^1.2.0",
-    "recharts": "^2.10.1"
+    "recharts": "^2.10.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
