--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@coreui/react": "^4.11.0",
     "aos": "^2.3.4",
-    "axios": "^1.6.2",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
     "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.5",
     "react-typed": "^1.2.0",
     "recharts": "^2.10.1",
     "zustand": "^4.5.0"
