--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-VITE_SERVER_URL=http://localhost:5000/api
+VITE_SERVER_URL=https://godspower.onrender.com/api
+# VITE_SERVER_URL=http://localhost:5000/api
